# plastic

./: .clang-format  CMakeLists.txt  README.md
dependencies/GLFW/include/: glfw3.h
dependencies/glad/: glad.h
src/: Game.cpp  Game.h  config.h  glad.c  main.cpp
src/core/UI/: Element.cpp  Element.h
src/core/UI/elements/: Element.cpp  Element.h
src/core/UI/elements/button/: Button.cpp  Button.h
src/core/UI/elements/container/: Container.cpp  Container.h
src/core/UI/elements/dropdown/: Dropdown.cpp  Dropdown.h
src/core/UI/elements/slider/: Slider.cpp  Slider.h
src/core/UI/elements/textbox/: Textbox.cpp  Textbox.h
src/core/UI/elements/toggle/: Toggle.cpp  Toggle.h
src/core/UI/scene/: Scene.cpp  Scene.h
src/core/UI/scene/manager/: SceneManager.cpp  SceneManager.h
src/core/UI/scene/scenes/: DeathScreen.cpp  DeathScreen.h  InGame.cpp  InGame.h  InReplay.cpp  InReplay.h  MainMenu.cpp  MainMenu.h  Options.cpp  Options.h  Pause.cpp  Pause.h  Settings.cpp  Settings.h  WorldCreation.cpp  WorldCreation.h  WorldSelection.cpp  WorldSelection.h
src/core/action/: Action.cpp  Action.h
src/core/action/manager/: ActionManager.cpp  ActionManager.h
src/core/camera/: Camera.cpp  Camera.h
src/core/input/: InputHandler.cpp  InputHandler.h
src/core/inventory/: Inventory.cpp  Inventory.h
src/core/island/: Island.cpp  Island.h
src/core/replay/: Replay.cpp  Replay.h
src/core/replay/manager/: ReplayManager.cpp  ReplayManager.h
src/core/scene/: Scene.cpp  Scene.h
src/core/scene/manager/: SceneManager.cpp  SceneManager.h
src/core/upgrades/: Upgrade.cpp  Upgrade.h
src/core/upgrades/manager/: UpgradeManager.cpp  UpgradeManager.h  UpgradePath.cpp  UpgradePath.h
src/core/upgrades/panel/: UpgradePanel.cpp  UpgradePanel.h
src/core/upgrades/turret/: TurretUpgradeManager.cpp  TurretUpgradeManager.h
src/core/wave/: Wave.cpp  Wave.h
src/core/wave/manager/: WaveManager.cpp  WaveManager.h
src/core/world/: World.cpp  World.h
src/entity/: Entity.cpp  Entity.h
src/entity/enemy/: Enemy.cpp  Enemy.h
src/entity/explosion/: Explosion.cpp  Explosion.h
src/entity/player/: Player.cpp  Player.h
src/entity/projectile/: Projectile.cpp  Projectile.h
src/entity/turret/: Turret.cpp  Turret.h
src/entity/turret/manager/: TurretManager.cpp  TurretManager.h  Upgrades.h
src/entity/turret/manager/shop/: Shop.cpp  Shop.h
src/entity/turret/panel/: ShopPanel.cpp  ShopPanel.h
src/tilemap/: Tile.h  Tilemap.cpp  Tilemap.h
src/utils/math/: random.cpp
src/utils/math/collision/: Collision.cpp  Collision.h
src/utils/math/color/: color.h
src/utils/math/noise/: Perlin.cpp  Perlin.h
src/utils/math/number/: number.h
src/utils/render/: RenderUtils.cpp  RenderUtils.h  Renderer.cpp  Renderer.h
src/utils/render/batch/: BatchRenderer.cpp  BatchRenderer.h
src/utils/render/sprites/: SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h
src/utils/render/text/: TextRenderer.cpp  TextRenderer.h
src/utils/shader/: ShaderUtils.cpp  ShaderUtils.h
src/utils/shader/shaders/: fragment.glsl  fragment.txt  vertex.glsl  vertex.txt
src/utils/shader/shaders/batch/: fragment.glsl  vertex.glsl
src/utils/shader/shaders/shape/: fragment.glsl  vertex.glsl
src/utils/shader/shaders/sprite/: fragment.glsl  vertex.glsl
src/utils/shader/shaders/text/: vertex.glsl
src/utils/time/: TimeUtils.cpp  TimeUtils.h
